# Agentic-Lookbook-Generator

./: .env.example  Dockerfile  README.md  api.py  main.py  pyproject.toml  requirements.txt
data/cache/: curator_cache.json  director_cache.json  editor_cache.json  image_cache.json  stylist_cache.json  visual_director_cache.json
notebooks/: test-1.ipynb  test-2.ipynb
src/agents/: curator_agent.py  director_agent.py  editor_agent.py  stylist_agent.py  visual_director.py
src/exception/: __init__.py
src/logger/: __init__.py
src/pipeline/: pipeline.py
src/prompts/: prompts.py
src/schemas/: schema.py
src/services/: image_generator.py
src/state/: state.py
src/utils/: utils.py
static/: app.js  styles.css
templates/: index.html
