[project]
name = "agentic-lookbook-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorlog>=6.10.1",
    "fastapi>=0.138.1",
    "httpx>=0.28.1",
    "ipykernel>=7.3.0",
    "jinja2>=3.1.6",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.7",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-groq>=1.1.3",
    "langchain-nvidia-ai-endpoints>=1.4.2",
    "langgraph>=1.2.6",
    "langsmith>=0.9.2",
    "litellm>=1.90.0",
    "matplotlib>=3.11.0",
    "pillow>=12.2.0",
    "pydantic>=2.13.4",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.32",
    "tiktoken>=0.13.0",
    "uvicorn>=0.49.0",
]

[tool.pyright]
extraPaths = ["."]

